# ragtable-extract

./: .gitignore  LICENSE  README.md  README_zh.md  app.py  comparison_report.html  demo.py  pdf_table_to_html.py  pyproject.toml  requirements.txt  test.py
ragtable_extract/: __init__.py  __main__.py  _config.py  _core.py  _font.py  _html.py
templates/: index.html
test/result/: test_adaptive_changsha.html  test_adaptive_shaanxi.html  test_adaptive_tongbao.html  test_adaptive_zhejiang.html
